# MJ_Project

./: .gitignore  tailwind.config.js
college_data/: .gitignore  pyproject.toml
college_data/cds_OCR/: single_md_to_json.py
college_data/data_capplica_application/: README.md  capplica_application_bilingual_final_errors.json  capplica_application_bilingual_final_test.json  capplica_application_converted.xlsx  capplica_examples.json  convert_csv_json.py  fix_hooks_null_to_empty_list.py  migrate_to_supabase.py
college_data/json_formatter/: README.md  batch_process.py  batch_process_final.py  dspy_optimization.py  single_post.py  single_post_final.py
nextjs/: .gitignore  eslint.config.mjs  middleware.ts  next.config.ts  package.json  postcss.config.cjs  tailwind.config.js
nextjs/actions/: auth.ts
nextjs/app/: globals.css  layout.tsx  page.tsx
nextjs/components/: Icon.tsx  Logo.tsx  LogoSVG.tsx  ModeToggle.tsx  StagewiseToolbar.tsx  nav-main.tsx  nav-projects.tsx  toast.tsx
nextjs/hooks/: use-mobile.ts  useToast.ts
nextjs/supabase/: config.toml
webCrawling/: main.py  pyproject.toml
webCrawling/essay_prompt/: CollegeEssayAdvisors_Essays.json  CollegeVineEssays_Essays.json  CollegeVineEssays_errors.json  CollegeVineGuide_Essays.json  CollegeVineGuide_errors.json  Essay.csv  EssayGuy_Essays.json  batch_essay_crawler.py  create_university_url_mapping.py  essay_prompt.py  university_url_mapping.json
webCrawling/news/: rss_app.py  rss_parser.py  single_crawl.py
webCrawling/news/sql/: createTable.sql  rssfeed.sql
webCrawling/reddit/: reddit_crawl.py
(+133 files in other folders)
